--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,4 +4,6 @@
 @import './components/header';
 @import './components/button';
 @import './components/timeline';
+@import './components/assets';
+@import './components/workplace';
 
