Add asset inspect function and update css style

--- a/src/styles/base/_setttings.scss
+++ b/src/styles/base/_setttings.scss
@@ -7,6 +7,7 @@ $cadet-blue: #5f9ea0;
 $crown-diamond: #e8e9e8;
 $rose-red: #a25d5d;
 $light-brown: #ffa544;
+$cobble-stone: #a89a8e;
 
 
 // Spacing and Size
