--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,4 +6,6 @@
 @import './components/timeline';
 @import './components/assets';
 @import './components/workplace';
+@import './components/inspector';
+@import './components/homepage';
 
