--- a/src/styles/components/_assets.scss
+++ b/src/styles/components/_assets.scss
@@ -57,7 +57,6 @@
             }
 
             &__delete {
-                background-color: red;
                 border-radius: $xs-size $xs-size $xl-size $xl-size;
                 background-color: darken($crown-diamond, 20);
                 position: absolute;
@@ -66,12 +65,38 @@
                 font-size: $m-font;
                 border: none;
                 color: white;
+
+                &:hover {
+                    background-color: $rose-red;
+                    color: lighten($rose-red, 50);
+                }
             }
 
-            &__delete:hover {
-                background-color: $rose-red;
-                color: lighten($rose-red, 50);
+
+
+            &__add {
+                background-color: darken($crown-diamond, 20);
+                position: absolute;
+                top: 65%;
+                right: 40%;
+                font-size: $s-font;
+                border: none;
+                color: white;
+                transition: transform .3s;
+
+                &:hover {
+                    font-size: $l-font;
+                    width: 20rem;
+                    height: 8rem;
+                    background-color: rgba($rose-red, .6);
+                    color: lighten($rose-red, 50);
+                    transform: translate(8rem, -5rem);
+                }
             }
+
+
+
+
         }
     }
 }
