add mov support

--- a/src/styles/components/_inspector.scss
+++ b/src/styles/components/_inspector.scss
@@ -1,5 +1,5 @@
 .inspector {
-    padding-top: $xxl-size;
+    padding-top: $s-size;
     color: $dark-cyan-blue;
     overflow: hidden;
     display: flex;
