--- a/src/styles/components/_workplace.scss
+++ b/src/styles/components/_workplace.scss
@@ -1,11 +1,21 @@
 .workplace {
-    padding-top: $xxl-size;
+    padding-top: $s-size;
 
     &__preview {
+        position: relative;
         display: block;
         text-align: center;
 
         &__canvas {
+            height: 30rem;
+            width: 100%;
+        }
+
+        &__resize {
+            position: absolute;
+            right: 0;
+            top: 0;
+            z-index: 100;
         }
 
         &__toolbar {
