--- a/src/styles/components/_workplace.scss
+++ b/src/styles/components/_workplace.scss
@@ -7,7 +7,7 @@
         text-align: center;
 
         &__canvas {
-            height: 30rem;
+            height: 100%;
             width: 100%;
         }
 
