--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,4 +8,5 @@
 @import './components/workplace';
 @import './components/inspector';
 @import './components/homepage';
+@import './components/popup';
 
