--- a/src/styles/components/_workplace.scss
+++ b/src/styles/components/_workplace.scss
@@ -7,15 +7,37 @@
         text-align: center;
 
         &__canvas {
-            height: 100%;
-            width: 100%;
+            height: 80%;
+            width: 80%;
+
+            &--full-screen {
+                z-index: 1000;
+                position: fixed;
+                height: 100%;
+                width: 100%;
+                left: 0;
+                top: 0;
+                background-color: black;
+            }
         }
 
         &__resize {
+            opacity: 0.4;
             position: absolute;
-            right: 0;
+            right: 10%;
             top: 0;
             z-index: 100;
+
+            &:hover {
+                opacity: 1;
+            }
+
+            &--full-screen {
+                z-index: 1001;
+                position: fixed;
+                right: 0;
+                top: 0;
+            }
         }
 
         &__toolbar {
