Add volume control

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,6 @@
 html {
     font-size: 62.5%;
-    background-image: $bg-img;
-    background-repeat: repeat;
+    background-color: $crown-diamond;
     color: $crown-diamond;
     height: fit-content;
 }
