change background color

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,6 @@
 html {
     font-size: 62.5%;
-    background-image: $bg-img;
+    background-image: $crown-diamond;
     background-repeat: repeat;
     color: $crown-diamond;
     height: fit-content;
