update css styles

--- a/src/styles/base/_setttings.scss
+++ b/src/styles/base/_setttings.scss
@@ -1,11 +1,11 @@
 // Colors
-$titanium: #878681;
-$harbor-rat: #757d75;
+$titanium: #22221f;
+$harbor-rat: #e6e2df;
 $dark-cyan-blue: #292e33;
 $slate-gray: #708090;
-$cadet-blue: #5f9ea0;
-$crown-diamond: #e8e9e8;
-$rose-red: #a25d5d;
+$cadet-blue: #a5a6ac;
+$dark-black: #121113;
+$rose-red: #8f6e6e;
 $light-brown: #ffa544;
 $cobble-stone: #a89a8e;
 
@@ -22,7 +22,7 @@ $xxl-size: 9.6rem;
 // Text Size
 $xs-font: .5rem;
 $s-font: 1rem;
-$m-font: 2rem;
+$m-font: 1.5rem;
 $l-font: 3rem;
 $xl-font: 6rem;
 $xxl-font: 12rem;
