--- a/src/styles/components/_inspector.scss
+++ b/src/styles/components/_inspector.scss
@@ -21,7 +21,7 @@
 
     &__info {
         background-color: $dark-cyan-blue;
-        color: $crown-diamond;
+        color: $dark-black;
         font-size: $m-font;
         padding: $m-font;
         width: 90%;
