--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,16 @@
 html {
     font-size: 62.5%;
-    background-color: $crown-diamond;
-    color: $crown-diamond;
-    height: fit-content;
+    background-color: $dark-black;
+    font-family: "Franklin Gothic Medium", papyrus, Arial, Helvetica, sans-serif;
 }
 
-.content {
-    padding-left: 10%;
+body {
+    margin: 0 auto;
+}
+
+@media only screen and (max-width: 360px) {
+    .content {
+        padding-left: 0;
+        padding-top: 10%;
+    }
 }
