--- a/src/styles/components/_assets.scss
+++ b/src/styles/components/_assets.scss
@@ -1,17 +1,35 @@
 .assets {
-    position: sticky;
+    height: 100vh;
+    width: 25vw;
+    position: absolute;
+    left: 5vw;
     top: 0;
-    left: 10%;
-    height: $xxl-size;
-    width: 100%;
-    background-color: rgba($crown-diamond, .4);
-    border-radius: 0 0 $xl-size 0;
-    z-index: 1000;
-    overflow-y: hidden;
+    background-color: $dark-black;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: flex-start;
+    overflow-y: auto;
+    overflow-x: hidden;
+    font-family: papyrus;
+
+    &__title {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: black;
+        color: $harbor-rat;
+        position: absolute;
+        font-size: $m-font;
+        width: 100%;
+        height: 3rem;
+        margin-top: 0;
+        padding-top: 0;
+    }
 
     &__upload {
-        position: sticky;
-        top: 0;
+        position: absolute;
+        top: 3rem;
         left: 0;
         height: $l-size;
         width: $l-size;
@@ -33,17 +51,16 @@
     }
 
     &__container {
+        position: absolute;
+        top: 30px;
         padding-left: $xl-size;
         padding-top: $s-size;
-        width: max-content;
 
         &__card {
-            margin-bottom: -$l-size;
-            top: -$l-size;
             display: inline-block;
             position: relative;
             border-radius: $s-size;
-            background-color: lighten($crown-diamond, 10);
+            background-color: lighten($dark-black, 10);
             margin-left: $xs-size;
             width: 15rem;
             height: $xxl-font;
@@ -58,7 +75,7 @@
 
             &__delete {
                 border-radius: $xs-size $xs-size $xl-size $xl-size;
-                background-color: darken($crown-diamond, 20);
+                background-color: darken($dark-black, 20);
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -75,7 +92,7 @@
 
 
             &__add {
-                background-color: darken($crown-diamond, 20);
+                background-color: darken($dark-black, 20);
                 position: absolute;
                 top: 65%;
                 right: 40%;
@@ -99,4 +116,35 @@
 
         }
     }
+}
+
+@media only screen and (max-width: 600px) {
+    .assets {
+        height: $xxl-font;
+        width: 100%;
+        left: 0;
+        top: 10vh;
+        z-index: 1000;
+
+        background-color: green;
+
+        &__upload {
+            top: 0;
+        }
+
+        &__title {
+            visibility: hidden;
+        }
+
+        &__container {
+            top: 0;
+            &__card {
+                height: 13vh;
+            }
+
+        }
+
+
+    }
+
 }
