--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -1,9 +1,10 @@
 .home-page {
     padding: $xxl-font $xxl-font 0 $xxl-font;
+    font-family: papyrus;
 
     h1 {
         font-size: $xxl-font;
-        color: darken($crown-diamond, 15);
+        color: lighten($dark-black, 30);
         margin: $s-size;
 
         span {
@@ -40,7 +41,7 @@
 
 @media only screen and (max-width: 600px) {
     .home-page {
-        padding: $xl-font $s-font;
+        padding: $xxl-font $s-font;
         
         h1 {
             font-size: $xl-font;
