--- a/src/styles/components/_timeline.scss
+++ b/src/styles/components/_timeline.scss
@@ -1,34 +1,58 @@
 .timeline {
-    background-color: rgba($dark-cyan-blue, .1);
-    border-radius: $xl-size $xs-size $xs-size $xs-size;
+    box-sizing: border-box;
+    display: block;
+    height: 20%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
     padding: $m-size;
+    overflow: auto;
+    background-color: darken($rose-red, 45);
 
-    &__zoom {
+    &__tools {
         display: flex;
-        justify-content: right;
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: rosybrown;
 
-        &__slider {
-            max-width: fit-content;
-            -webkit-appearance: none;
-            border: none;
-            padding: $s-size;
+        &__zoom {
+            display: flex;
+            justify-content: right;
 
-            &::-webkit-slider-runnable-track {
-                background: lighten($titanium, 20);
-                cursor: pointer;
-            }
-
-            &::-webkit-slider-thumb {
+            &__slider {
+                max-width: fit-content;
                 -webkit-appearance: none;
-                height: 10px;
-                width: 20px;
-                background: $rose-red;
+                border: none;
+                padding: $s-size;
+
+                &::-webkit-slider-runnable-track {
+                    background: lighten($titanium, 20);
+                    cursor: pointer;
+                }
+
+                &::-webkit-slider-thumb {
+                    -webkit-appearance: none;
+                    height: 10px;
+                    width: 20px;
+                    background: $rose-red;
+                }
             }
+        }
+
+        &__split {
+            color: red;
+            height: fit-content;
+            font-size: $m-font;
+            padding: $s-font;
+            border-radius: $xs-size $xs-size $xl-size $xl-size;
+            border-color: white;
         }
     }
 
+
+
     &__container {
-        background-color: $crown-diamond;
+        background-color: $harbor-rat;
         overflow-x: scroll;
         cursor: pointer;
 
@@ -54,6 +78,8 @@
                         position: relative;
                         display: flex;
                         overflow: hidden;
+                        font-size: $m-font;
+
 
                         &__volume {
                             position: absolute;
@@ -62,9 +88,8 @@
                             bottom: 0;
                             left: 0;
                             z-index: 100;
-                            color: $crown-diamond;
-                            font-size: $s-font;
-       
+                            color: white;
+
                             input {
                                 position: absolute;
                                 margin-left: $xs-size;
@@ -88,6 +113,7 @@
 
                             &:hover {
                                 opacity: 1;
+
                                 input {
                                     display: inline-block;
                                 }
@@ -96,19 +122,18 @@
                         }
 
                         button {
-                            opacity: 0.6;
+                            border-radius: $xs-size $xs-size $xl-size $xl-size;
+                            color: white;
+                            background-color: darken($dark-black, 20);
                             position: absolute;
                             top: 0;
                             left: 0;
-                            font-size: $xs-font;
+                            font-size: $s-font;
                             height: 30%;
-                            color: $rose-red;
-                            background-color: $crown-diamond;
 
                             &:hover {
-                                opacity: 1;
-                                color: $crown-diamond;
                                 background-color: $rose-red;
+                                color: lighten($rose-red, 50);
                             }
                         }
                     }
@@ -116,6 +141,16 @@
             }
 
         }
+
+
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .timeline {
+        width: 100vw;
+        height: auto;
+        min-height: 10vh;
 
 
     }
