--- a/src/styles/components/_timeline.scss
+++ b/src/styles/components/_timeline.scss
@@ -8,7 +8,7 @@
     padding: $m-size;
     overflow: auto;
     background-color: darken($rose-red, 45);
-    border-radius: $-size;
+    border-radius: $l-size;
 
     &__tools {
         display: flex;
