update css styles

--- a/src/styles/base/_setttings.scss
+++ b/src/styles/base/_setttings.scss
@@ -3,7 +3,7 @@ $titanium: #22221f;
 $harbor-rat: #e6e2df;
 $dark-cyan-blue: #292e33;
 $slate-gray: #708090;
-$cadet-blue: #a5a6ac;
+$cadet-blue: #3e3e42;
 $dark-black: #121113;
 $rose-red: #8f6e6e;
 $light-brown: #ffa544;
