--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -1,4 +1,5 @@
 .home-page {
+    
     padding: $xxl-font $xxl-font 0 $xxl-font;
     font-family: papyrus;
 
@@ -33,7 +34,7 @@
         font-size: $m-font;
 
         a {
-            color: $cadet-blue;
+            color: white;
             text-decoration: none;
         }
     }
