--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -1,8 +1,8 @@
 .popup {
     z-index: 1000;
     position: fixed;
-    left: 10%;
-    top: 10%;
+    left: 0;
+    top: 0%;
     height: $m-font;
     width: 100%;
     opacity: .9;
