--- a/src/styles/components/_timeline.scss
+++ b/src/styles/components/_timeline.scss
@@ -1,20 +1,19 @@
 .timeline {
     box-sizing: border-box;
     display: block;
-    height: 20%;
+    height: 30%;
     width: 100%;
     position: absolute;
     bottom: 0;
     padding: $m-size;
     overflow: auto;
-    background-color: darken($rose-red, 45);
-    border-radius: $l-size;
 
     &__tools {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        background-color: rosybrown;
+        border: .1rem $cadet-blue solid;
+        border-radius: $m-size;
 
         &__zoom {
             display: flex;
@@ -25,9 +24,10 @@
                 -webkit-appearance: none;
                 border: none;
                 padding: $s-size;
+                background-color: transparent;
 
                 &::-webkit-slider-runnable-track {
-                    background: lighten($titanium, 20);
+                    background: $titanium;
                     cursor: pointer;
                 }
 
@@ -35,45 +35,63 @@
                     -webkit-appearance: none;
                     height: 10px;
                     width: 20px;
-                    background: $rose-red;
+                    background: $harbor-rat;
                 }
             }
         }
 
         &__split {
-            color: red;
+            color: white;
+            background-color: black;
             height: fit-content;
             font-size: $m-font;
             padding: $s-font;
-            border-radius: $xs-size $xs-size $xl-size $xl-size;
-            border-color: white;
+            margin: 1%;
+            border-radius: $xs-size;
+            border: .1rem $cadet-blue solid;
         }
     }
 
 
 
     &__container {
-        background-color: darken($harbor-rat, 10);
+        width: 100%;
+        height: 65%;
+        background-color: darken($slate-gray, 40);
         overflow-x: scroll;
         cursor: pointer;
+
+        &::-webkit-scrollbar {
+            width: 100%;
+        }
+
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 .4rem grey;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: lighten(black, 20);
+            box-shadow: inset 0 0 1rem $dark-black;
+        }
 
         &__ruler {
             display: block;
             font-size: $s-size;
-            background-color: lighten($rose-red, 20);
+            background-color: lighten($dark-black, 40);
         }
 
         &__channels {
             display: block;
+            height: 150px;
 
             &__channel {
                 overflow: hidden;
 
                 &__clip {
                     display: inline-block;
-                    border-right: $xxs-size solid $light-brown;
-                    background-color: lighten($rose-red, 40);
-
+                    border-right: $xxs-size solid $slate-gray;
+                    background-color: lighten($dark-black, 20);
+                    box-shadow: inset 0 0 1rem $dark-black;
 
                     &__tool {
                         position: relative;
@@ -88,7 +106,7 @@
                             opacity: .5;
                             bottom: 0;
                             left: 0;
-                            z-index: 100;
+                            z-index: 1000;
                             color: white;
 
                             input {
