--- a/src/styles/components/_workplace.scss
+++ b/src/styles/components/_workplace.scss
@@ -6,15 +6,15 @@
     left: 30vw;
     top: 0;
     overflow: auto;
-    background-color: darken($rose-red, 45);
     font-family: papyrus;
+    background: linear-gradient(lighten($dark-black, 10), black);
 
     &__preview {
-        display: block;
-        height: 80%;
+        height: 70%;
         width: 100%;
 
         &__title {
+            visibility: hidden;
             position: absolute;
             top: 0;
             left: 0;
@@ -28,11 +28,15 @@
         }
 
         &__container {
-            width: 100%;
-            height: 85%;
+            top: 3rem;
+            box-sizing: border-box;
+            width: 95%;
+            height: 80%;
+            margin: 2.5%;
         }
 
         &__toolbar {
+            display: block;
             width: 100%;
             height: 5%;
             display: flex;
@@ -41,10 +45,10 @@
             overflow: visible;
 
             button {
-                background-color: $rose-red;
+                background-color: transparent;
                 color: white;
-                width: 100%;
-                border-radius: $xl-size;
+                width: 10%;
+                border: none;
                 padding: $s-size;
             }
 
@@ -82,8 +86,9 @@
             }
 
             &__container {
+                margin: 0;
                 width: 100%;
-                height: 45vh;
+                height: 40vh;
             }
 
             &__toolbar {
